# OmniCaption

./: .env.example  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  GEMINI.md  PLAN.md  README.md  SPEC.md  STATUS.md  STATUS.template.md  SUBMISSION.md  TASKS.md  docker-compose.yml  package-lock.json  package.json
.claude/: settings.json
.githooks/: pre-push
docs/: 00-project-plan.md  01-architecture.md  02-tech-stack.md  03-captioning-pipeline.md  04-testing-strategy.md  (+20 more)
services/api/: .env.example  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
services/api/app/: __init__.py  main.py  schemas.py
services/api/app/core/: __init__.py  auth.py  config.py  deps.py  mailer.py  oracle_build.py  ratelimit.py  runner.py
services/api/app/routers/: __init__.py  auth.py  keys.py  media.py  oracle_bridge.py  qa.py  results.py  search.py  tasks.py
services/api/tests/: __init__.py  conftest.py  test_auth.py  test_auth_hardening.py  test_auth_migration.py  test_config.py  test_cookie_and_dns.py  test_deletes.py  test_health.py  test_keys.py  test_media.py  test_oracle_autobuild.py  test_oracle_live.py  test_ratelimit.py  test_ratelimit_backend.py  test_results.py  test_revocation.py  test_run.py  test_stretch_stubs.py  test_tasks.py  test_verification.py
services/captioner/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  Dockerfile.submit  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_local_test.py
services/captioner/app/: __init__.py  main.py
services/captioner/app/core/: __init__.py  config.py  errors.py  gpu.py  logging.py  schema.py  timing.py
services/captioner/app/models/: __init__.py  loader.py
services/captioner/app/pipeline/: __init__.py  audio.py  ingestion.py  memory.py  orchestrator.py  output.py  sidecars.py  synthesis.py  vision.py
services/captioner/app/prompts/: __init__.py  pmp.py  styles.py
services/captioner/scripts/: build_push.sh  capture_amd_evidence.sh  run_gemma4_batch.sh  smoke.sh
services/captioner/tests/: __init__.py  conftest.py
services/captioner/tests/contract/: __init__.py  test_output_contract.py  test_schema_fixtures.py
services/captioner/tests/fixtures/: results.sample.json
services/captioner/tests/fixtures/golden/: clips.json  fallback_captions.json  style_prompts.json
services/captioner/tests/fixtures/schemas/: results.schema.json  tasks.schema.json
services/captioner/tests/integration/: __init__.py  test_audio_fireworks.py  test_ingestion.py  test_pipeline_smoke.py  test_synthesis_fireworks.py
services/captioner/tests/regression/: __init__.py  regen_goldens.py  test_golden_styles.py
services/captioner/tests/unit/: test_audio_stage.py  test_config_judge_run.py  test_downloader.py  test_ffmpeg.py  test_keyframe_grid.py  test_reclaim.py  test_runtime_resilience.py  test_schema.py  test_sidecars.py  test_styles.py  test_synthesis.py  test_tasks_loader.py  test_tasks_salvage.py  test_timing.py  test_transcript_model.py  test_vision.py
services/oracle/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
services/oracle/oracle/: __init__.py  cli.py  clip_embed.py  corpus.py  embeddings.py  index.py  qa.py
services/oracle/tests/: __init__.py
services/oracle/tests/stretch/: __init__.py  conftest.py  test_clip.py  test_index.py  test_rag_answer.py  test_search.py
(+54 files in other folders)
