[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "omnicaption-api"
version = "0.1.0"
description = "OmniCaption backend API — REST bridge between the web frontend and the captioner pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OmniCaption Team" }]

# Runtime dependencies are pinned in requirements.txt (kept there so the
# Docker build can layer/cache them independently of package metadata).

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, B bugbear, C4 comprehensions, UP pyupgrade.
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = [
    "B008",  # function call in default arg — pydantic/Field patterns use this.
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
