[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "omnicaption-oracle"
version = "0.1.0"
description = "OmniCaption Video-Oracle — semantic moment search + grounded RAG QA (Track 3)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OmniCaption Team" }]
dependencies = ["httpx>=0.27", "pydantic>=2.7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["oracle*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = [
    "B008",  # function call in default arg — pydantic/Field patterns use this.
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["oracle"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
